Fix error where text is not visible (everything is white)

--- a/app/Resources/public/css/scorm.css
+++ b/app/Resources/public/css/scorm.css
@@ -245,7 +245,7 @@ See https://support.chamilo.org/issues/6976
     background:url("../../main/img/scorm/scorm_failed.png") no-repeat 10px center !important;
 }
 .scorm_highlight a{
-  color: #FFFFFF !important;
+    /* color: #FFFFFF !important;*/
 }
 .scorm_item_normal.scorm_highlight{
     background-color: #00829C;
